# cookbook

./: .gitignore  AI.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  LICENSE-MIT  PANTRYMAN_COMPLETION_SUMMARY.md  PANTRYMAN_INGREDIENT_UPDATE_RESOLUTION.md  PANTRYMAN_VISION.md  README.md  TESTING.md  TODO.md  TRANSLATION_WORKFLOW.md  cookbook.pot  da.po  dev.sh  run-cookbook.sh  run-pantryman.sh  test-data-sync.sh
.github/: copilot-instructions.md
cookbook-engine/: Cargo.toml  README.md
cookbook-engine/.github/: copilot-instructions.md
cookbook-engine/examples/: test_recipe_detail.rs
cookbook-engine/src/: lib.rs  (+3 more)
cookbook-gtk/: Cargo.toml
cookbook-gtk/assets/: style.css
cookbook-gtk/src/: app.rs  config.rs  dialogs.rs  i18n.rs  kb.rs  lib.rs  main.rs  pantry.rs  recipes.rs  settings.rs  sidebar.rs  tabs.rs  types.rs  ui_constants.rs  user_settings.rs  utils.rs
cookbook-gtk/src/components/: debug_hook.rs  kb.rs  mod.rs  pantry.rs  recipes.rs  settings.rs
cookbook-gtk/src/pantry/: detail.rs  format.rs  list.rs  mod.rs
cookbook-gtk/src/recipes/: detail.rs  edit.rs  list.rs  mod.rs
cookbook-gtk/src/ui/: about.rs  help.rs
cookbook-gtk/tests/: app_tests.rs  dialogs_tests.rs  i18n_tests.rs  kb_tests.rs  pantry_tests.rs  recipes_tests.rs  settings_tests.rs  sidebar_tests.rs  tabs_tests.rs  types_tests.rs  ui_constants_tests.rs  ui_integration_tests.rs  user_settings_tests.rs  utils_tests.rs
pantryman/: MVP_SUMMARY.md  README.md  build-and-test.sh  build.gradle  gradle.properties  run.sh  settings.gradle  ui.xml
(+67 files in other folders)
